# sonde

./: .coverage  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS-repo-exploration.md  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  ex_tex.tex  git-replace.md  security_best_practices_report.md  vercel.json  vercel.ts
.claude/: settings.json
.claude/agents/: sonde.md
.claude/skills/: cli-development.md  sonde-research.md  stac-data-workflow.md
.cursor/rules/: aeolus-conventions.mdc  sonde-formatter.mdc  sonde-research.mdc  stac-data-workflow.mdc
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: backup-recovery-drill.yml  ci.yml  cli-hosted-audit.yml  config-audit.yml  deploy-staging.yml  deploy.yml  merge-readiness.yml  production-backup.yml  promote-main.yml  reconcile-managed-costs.yml  release-health.yml  release.yml  smoke-production.yml  smoke-staging.yml  soak-staging.yml  tag-on-promote.yml  version-bump.yml
cli/: Makefile  README.md  pyproject.toml
cli/scripts/: bump_version.py
cli/src/sonde/: __init__.py  artifact_sync.py  auth.py  cli.py  cli_options.py  config.py  coordination.py  diagnostics.py  experiment_hygiene.py  finding_utils.py  git.py  ignore.py  local.py  note_utils.py  output.py  review_utils.py  runtimes.py  skills.py
cli/src/sonde/assets/: callback.html
cli/src/sonde/checkers/: __init__.py  brief.py  directions.py  experiments.py  findings.py  graph.py  tags.py
cli/src/sonde/commands/: _context.py  _experiment_query.py  _helpers.py  access.py  admin.py  archive.py  artifact_group.py  artifact_update.py  attach.py  auth.py  brief.py  brief_render.py  diff.py  direction_group.py  doctor.py  experiment.py  experiment_delete.py  experiment_list.py  experiment_search.py  experiment_show.py  experiment_update.py  finding_group.py  findings.py  focus.py  fork.py  handoff.py  health.py  history.py  init.py  lifecycle.py  log.py  new.py  next.py  note.py  program_group.py  project_brief.py  project_group.py  project_lifecycle.py  project_report.py  project_report_template.py  (+17 more)
cli/src/sonde/data/agents/: sonde.md
cli/src/sonde/data/skills/: aeolus-conventions.md  cli-development.md  sonde-formatter.md  sonde-project-report.md  sonde-research.md  sonde-review.md
cli/src/sonde/data/templates/: __init__.py  project-report.tex
cli/src/sonde/db/: __init__.py  activity.py  admin_access.py  admin_tokens.py  artifacts.py  auth_events.py  client.py  compat.py  direction_takeaways.py  directions.py  experiments.py  findings.py  health.py  ids.py  notes.py  notes_v2.py  program_creators.py  program_takeaways.py  programs.py  project_takeaways.py  projects.py  question_links.py  questions.py  reviews.py  tags.py  validate.py
cli/src/sonde/db/artifacts/: __init__.py  crud.py  inference.py  maintenance.py  storage.py
cli/src/sonde/db/experiments/: __init__.py  _filters.py  graph.py  maintenance.py  read.py  stats.py  tree.py
cli/src/sonde/models/: __init__.py  direction.py  doctor.py  experiment.py  finding.py  health.py  program.py  program_takeaways.py  project.py  question.py  review.py
cli/src/sonde/services/: __init__.py  directions.py  errors.py  experiments.py  findings.py  projects.py  questions.py
cli/tests/: conftest.py  test_admin_commands.py  test_artifact_sync.py  test_artifact_sync_integration.py  test_auth_commands.py  test_auth_events.py  test_auth_login_ux.py  test_brief.py  test_cli.py  test_compat.py  test_config.py  test_conftest_fixture.py  test_db_ids.py  test_db_layer.py  test_db_reviews.py  test_doctor.py  test_experiment_commands.py  test_experiment_query_helpers.py  test_findings_command.py  test_git.py  test_graph_checkers.py  test_handoff_lifecycle.py  test_health.py  test_init_command.py  test_lifecycle.py  test_local_hypothesis.py  test_models.py  test_note_command.py  test_output.py  test_program_commands.py  test_project.py  test_project_linking.py  test_provenance_hygiene.py  test_review_command.py  test_services.py  test_setup_runtimes.py  test_sync_commands.py  test_tree_command.py  test_upgrade_command.py
config/: hosted-environments.json
dev/guides/: cli_notes.md
dev/scripts/: README-seed.md  seed_synthetic_experiments.py  synthetic_experiment_fixtures.py
docs/: agent-setup.md  oauth-flows.md
docs/ops/: production-backup-recovery.md
docs/security/: audit-2026-04-16.md
notes/: aeolus-architecture.md  friction-2026-03-31.md  meta-harness-review.md  takeaways-cli-vs-mcp.md  takeaways-design-philosophy.md  takeaways-sonde-vs-github.md
notes/aeolus-cli/: README.md  scope.md
notes/agentic-data-scientist/: README.md
notes/ai-scientist-v2/: README.md
notes/atlas-gic/: README.md
notes/autoresearch/: README.md
notes/autoresearch-claw/: README.md
notes/breeze/: README.md
notes/datagen/: README.md
notes/deepagents/: README.md
notes/denario/: README.md
notes/mirofish/: README.md
notes/scienceclaw/: README.md
notes/takeaways/: README.md  agent-stack-choice.md  claude-code-vs-consumer-product.md  data-analyst-vs-research-agent.md  multi-agent-reality-check.md  obsidian-living-knowledge-base.md  obsidian-vs-mem0.md
notes/trading-agents/: README.md
prd/: north-star-vision.md  overview.md
prd/cli/: README.md  github-integration.md
scripts/: check-legacy-provider-refs.sh  mp4_to_ascii.py  mp4_to_ascii_gif.py
server/: example.env  package-lock.json  package.json
supabase/: config.toml  seed.sql
tickets/: 001-knowledge-graph-layer.md  002-data-management-layer.md  003-identity-and-agent-tracking.md  004-agent-data-retrieval-and-catalog-sync.md  005-knowledge-base-entropy-and-curation.md  005-local-workspace-management.md  006-sonde-agent-package.md  006-stac-integration-and-data-workflow.md  007-living-knowledge-base.md  008-experiment-tree-branching.md  009-managed-agents-sandbox-migration.md  ui-unified-views.md
ui/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vercel.json  vercel.ts  vite.config.ts
(+565 files in other folders)
