[project]
name = "sonde"
dynamic = ["version"]
description = "Scientific discovery management CLI for the Aeolus research platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Aeolus Team" }]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "keyring>=25.7.0",
]

[project.scripts]
sonde = "sonde.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
version_scheme = "guess-next-dev"
fallback_version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/sonde/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sonde"]

# --- Development dependencies ---
[dependency-groups]
dev = [
    "boto3>=1.34",
    "ruff>=0.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "syrupy>=4.0",
    "respx>=0.22",
    "ty>=0.0.26",
    "vulture>=2.16",
]

# --- Ruff (linter + formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "T20",  # flake8-print (catch stray prints)
    "RUF",  # ruff-specific rules
]
ignore = [
    "T201",  # allow print() — we're a CLI, we print things
]

[tool.ruff.lint.isort]
known-first-party = ["sonde"]

[tool.ruff.lint.per-file-ignores]
"../dev/scripts/*.py" = [
    "E402",  # imports after sys.path bootstrap for sonde package
    "E501",  # long synthetic markdown strings
    "I001",  # import block order with path setup
    "RUF001",  # intentional unicode in stress-test payloads
]

# --- Vulture (high-confidence dead-code scan) ---
[tool.vulture]
paths = ["src", "tests"]
min_confidence = 80
sort_by_size = true
ignore_names = [
    # Click callback argument retained for the existing --quick option.
    "quick",
    # Click method override signature must match click.Command.
    "formatter",
    # Pydantic validator classmethod signatures intentionally follow Ruff's N804 convention.
    "cls",
    # Pytest fixtures are requested by name in test signatures.
    "authenticated",
    "console",
    "siblings_rpc_data",
    "tree_summary",
]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=sonde",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--tb=short",
]
markers = [
    "integration: requires a running Supabase instance (deselect with '-m not integration')",
]

# --- Coverage ---
[tool.coverage.run]
source = ["sonde"]
omit = ["src/sonde/assets/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "pass  # Keyring is best-effort",
]
